--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,8 @@ hr {
 .produtos {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    width: 80%;
 }
 
 .pagProdutos {
@@ -60,13 +61,17 @@ hr {
 }
 
 .categorias {
-    width: 50%;
+    width: 20%;
 }
 
 .categorias li {
     font-size: 14px;
     margin: 0 20px;
     list-style-type: square;
+}
+
+.categorias li:hover {
+    cursor: pointer;
 }
 
 .box_produto {
@@ -84,11 +89,7 @@ hr {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-}
-
-.box_img img {
-    max-height: 85%;
-    max-width: 85%;
+    cursor: pointer;
 }
 
 .descricao,
@@ -105,6 +106,7 @@ hr {
     font-size: 20px;
     color: red;
     margin-top: 0px;
+    text-align: center;
 }
 
 .fale_conosco {
@@ -149,6 +151,7 @@ footer #formas_pagamento {
 footer#rodape {
     text-align: center;
     font-weight: bolder;
+    margin-top: 23%;
 }
 
 footer#rodape img {
